updates & clean cmd

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "cross-spawn-async": "^2.1.9",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
-    "eslint-plugin-react": "^4.2.1"
+    "eslint-plugin-react": "^4.2.1",
+    "rimraf": "^2.5.2"
   },
   "bin": {
     "wce": "./src/wce"
