--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   "author": "Nicolas Briemant",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
     "chalk": "^1.1.1",
     "commander": "^2.9.0",
+    "cross-spawn": "^2.1.5",
     "cross-spawn-async": "^2.1.9",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
