--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-equal-jsx": "^1.0.9",
     "chalk": "^1.1.1",
     "commander": "^2.9.0",
     "cross-env": "^1.0.7",
@@ -35,14 +38,19 @@
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.1",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.13.4",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
+    "mocha": "^2.4.5",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "bin": {
     "wce": "./src/wce"
