--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "json-loader": "^0.5.4",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.4.5",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.0",
