--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-component-env",
-  "version": "1.0.0",
+  "description": "Automation env for web components",
+  "version": "1.0.1",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
