--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "Automation env for web components",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,6 +29,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "chai-equal-jsx": "^1.0.9",
     "chalk": "^1.1.1",
     "commander": "^2.9.0",
@@ -58,7 +59,7 @@
   "bin": {
     "wce": "./src/wce"
   },
-  "engines" : {
-    "npm" : "^3.4.1"
+  "engines": {
+    "npm": "^3.4.1"
   }
 }
