--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "Automation env for web components",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,7 +16,8 @@
     "mocha",
     "chai",
     "less",
-    "postcss"
+    "postcss",
+    "boilerplate"
   ],
   "author": "Nicolas Briemant",
   "homepage": "https://github.com/nicolas-briemant/web-component-env",
