--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "Automation env for web components",
-  "version": "1.1.14",
+  "version": "1.2.14",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -50,7 +50,9 @@
     "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-react": "^4.2.1",
+    "eslint-plugin-import": "^1.5.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^5.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
