--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "Automation env for web components",
-  "version": "1.2.14",
+  "version": "1.2.15",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -56,6 +56,7 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
+    "fs-extra": "^0.28.0",
     "json-loader": "^0.5.4",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
