--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-__coverage__": "^0.111111.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
@@ -61,6 +62,7 @@
     "less-loader": "^2.2.2",
     "mkdirp": "^0.5.1",
     "mocha": "^2.4.5",
+    "nyc": "^6.4.3",
     "postcss-loader": "^0.8.2",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.0",
