--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "Automation env for web components",
-  "version": "1.2.16",
+  "version": "1.3.16",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,7 +18,9 @@
     "less",
     "postcss",
     "boilerplate",
-    "hmr"
+    "hmr",
+    "nyc",
+    "coverage"
   ],
   "author": "Nicolas Briemant",
   "homepage": "https://github.com/nicolas-briemant/web-component-env",
