--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "Automation env for web components",
-  "version": "1.6.5",
+  "version": "1.6.6",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -38,6 +38,7 @@
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-__coverage__": "^0.111111.1",
+    "babel-plugin-import": "^1.0.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
