--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "json-loader": "^0.5.4",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
+    "lodash": "^4.16.4",
     "mkdirp": "^0.5.1",
     "mocha": "^2.4.5",
     "nyc": "^6.4.3",
