--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "Automation env for web components",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -53,13 +53,16 @@
     "cross-spawn": "^2.1.5",
     "cross-spawn-async": "^2.1.9",
     "css-loader": "^0.23.1",
+    "es6-promise": "^4.0.5",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-import": "^1.5.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^5.0.1",
+    "exports-loader": "^0.6.3",
     "file-loader": "^0.8.5",
     "fs-extra": "^0.28.0",
+    "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
@@ -74,7 +77,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.12.0"
+    "webpack-merge": "^0.12.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "bin": {
     "wce": "./src/wce"
