--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,17 @@
 {
   "extends": "airbnb",
+  "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/forbid-prop-types": [0, { "forbid": ['any', 'array', 'object'] }]
+  }
   "parserOptions":{
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true
     }
   },
   "env": {
+    "browser": true,
+    "node": true,
     "mocha": true
   }
 }
