--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
-  "description": "Automation env for web components",
-  "version": "2.0.6",
+  "description": "front-end development boilerplate",
+  "version": "2.1.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
