--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "front-end development boilerplate",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -76,6 +76,7 @@
     "tree-kill": "^1.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
+    "webpack-bundle-analyzer": "^2.1.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.12.0",
     "whatwg-fetch": "^1.0.0"
