--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "front-end development boilerplate",
-  "version": "2.1.4",
+  "version": "2.1.5",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -40,11 +40,13 @@
     "babel-plugin-__coverage__": "^0.111111.1",
     "babel-plugin-import": "^1.0.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.20.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "chai-equal-jsx": "^1.0.9",
