--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "front-end development boilerplate",
-  "version": "2.1.5",
+  "version": "2.1.6",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -39,6 +39,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-__coverage__": "^0.111111.1",
     "babel-plugin-import": "^1.0.1",
+    "babel-plugin-lodash": "^3.2.10",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.20.0",
@@ -70,6 +71,7 @@
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
     "lodash": "^4.16.4",
+    "lodash-webpack-plugin": "^0.10.6",
     "mkdirp": "^0.5.1",
     "mocha": "^2.4.5",
     "nyc": "^6.4.3",
