--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "front-end development boilerplate",
-  "version": "2.2.9",
+  "version": "2.3.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -61,7 +61,7 @@
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-import": "^1.5.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^5.0.1",
+    "eslint-plugin-react": "^4.3.0",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.8.5",
     "fs-extra": "^0.28.0",
@@ -74,6 +74,7 @@
     "mocha": "^2.4.5",
     "nyc": "^6.4.3",
     "postcss-loader": "^0.8.2",
+    "react": "^15.5.4",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.0",
     "tree-kill": "^1.0.0",
