--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "front-end development boilerplate",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -75,6 +75,7 @@
     "nyc": "^6.4.3",
     "postcss-loader": "^0.8.2",
     "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.0",
     "tree-kill": "^1.0.0",
