--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-component-env",
   "description": "front-end development boilerplate",
-  "version": "2.8.1",
+  "version": "2.8.2",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -65,6 +65,7 @@
     "exports-loader": "^0.6.3",
     "file-loader": "^0.8.5",
     "fs-extra": "^0.28.0",
+    "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
     "less": "^2.6.1",
