--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-__coverage__": "^0.111111.1",
+    "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-import": "^1.0.1",
     "babel-plugin-lodash": "^3.2.10",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
